@@ -1,42 +1,48 @@
 buildscript{
     ext{
-        getArcHash = {
-            return new Properties().with{ p -> p.load(file('gradle.properties').newReader()); return p }["archash"]
-        }
+        arcHash = property("archash")
 
-        arcHash = getArcHash()
+        localArc = !project.hasProperty("release") && new File(rootDir.parent, 'Arc').exists() && !project.hasProperty("noLocalArc")
+
+        arcModule = { String name ->
+            //skip to last submodule
+            name = name.substring(name.lastIndexOf(':') + 1)
+            return "com.github.Anuken${localArc ? "" : ".Arc"}:$name:$arcHash"
+        }
     }
-    
+
     repositories{
         mavenLocal()
         mavenCentral()
         google()
         maven{ url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        jcenter()
         maven{ url 'https://jitpack.io' }
     }
 
     dependencies{
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.11'
-        classpath "com.github.anuken:packr:-SNAPSHOT"
-        classpath "com.github.Anuken.Arc:packer:$arcHash"
-        classpath "com.github.Anuken.Arc:arc-core:$arcHash"
+        classpath arcModule(":extensions:packer")
+        classpath arcModule(":arc-core")
     }
 }
 
+plugins{
+    id "org.jetbrains.kotlin.jvm" version "1.6.0"
+    id "org.jetbrains.kotlin.kapt" version "1.6.0"
+}
+
 allprojects{
-    apply plugin: 'maven'
-    
-    version = 'release'
+    apply plugin: 'maven-publish'
+
+    version = project.hasProperty("packageVersion") ? project.getProperty("packageVersion") : 'release'
     group = 'com.github.Anuken'
 
     ext{
-        versionNumber = '6'
+        versionNumber = '7'
         if(!project.hasProperty("versionModifier")) versionModifier = 'release'
         if(!project.hasProperty("versionType")) versionType = 'official'
         appName = 'Mindustry'
-        steamworksVersion = '891ed912791e01fe9ee6237a6497e5212b85c256'
-        rhinoVersion = '2617981f706e50b8753155d8e15e326308be3b22'
+        steamworksVersion = '0b86023401880bb5e586bc404bedbaae9b1f1c94'
+        rhinoVersion = '73a812444ac388ac2d94013b5cadc8f70b7ea027'
 
         loadVersionProps = {
             return new Properties().with{p -> p.load(file('../core/assets/version.properties').newReader()); return p }
@@ -44,20 +50,6 @@ allprojects{
 
         debugged = {
             return new File(projectDir.parent, '../Mindustry-Debug').exists() && !project.hasProperty("release") && project.hasProperty("args")
-        }
-
-        localArc = {
-            return !project.hasProperty("release") && new File(projectDir.parent, '../Arc').exists()
-        }
-
-        arcModule = { String name ->
-            if(localArc()){
-                return project(":Arc:$name")
-            }else{
-                //skip to last submodule
-                if(name.contains(':')) name = name.split(':').last()
-                return "com.github.Anuken.Arc:$name:${getArcHash()}"
-            }
         }
 
         generateDeployName = { String platform ->
@@ -84,19 +76,21 @@ allprojects{
         }
 
         hasSprites = {
-            return new File(rootDir, "core/assets/sprites/sprites.atlas").exists()
+            return new File(rootDir, "core/assets/sprites/sprites.aatls").exists()
         }
 
         getModifierString = {
-            if(versionModifier != "release"){
-                return "[${versionModifier.toUpperCase()}]"
-            }
+            if(versionModifier != "release") return "[${versionModifier.toUpperCase()}]"
             return ""
         }
 
         getBuildVersion = {
             if(!project.hasProperty("buildversion")) return "custom build"
             return project.getProperties()["buildversion"]
+        }
+
+        getCommitHash = {
+            return 'git rev-parse --verify --short HEAD'.execute().text.trim()
         }
 
         getPackage = {
@@ -108,8 +102,7 @@ allprojects{
             def v = System.getenv("ANDROID_HOME")
             if(v != null) return v
             //rootDir is null here, amazing. brilliant.
-            def file = new File("local.properties")
-            if(!file.exists()) file = new File("../local.properties")
+            def file = new File(rootDir, "local.properties")
             def props = new Properties().with{p -> p.load(file.newReader()); return p }
             return props.get("sdk.dir")
         }
@@ -117,12 +110,12 @@ allprojects{
         generateLocales = {
             def output = 'en\n'
             def bundles = new File(project(':core').projectDir, 'assets/bundles/')
-            bundles.listFiles().each{ other ->
-                if(other.name == "bundle.properties") return
-                output += other.name.substring("bundle".length() + 1, other.name.lastIndexOf('.')) + "\n"
+            bundles.list().sort().each{ name ->
+                if(name == "bundle.properties") return
+                output += name.substring("bundle".length() + 1, name.lastIndexOf('.')) + "\n"
             }
             new File(project(':core').projectDir, 'assets/locales').text = output
-            new File(project(':core').projectDir, 'assets/basepartnames').text = new File(project(':core').projectDir, 'assets/baseparts/').list().join("\n")
+            new File(project(':core').projectDir, 'assets/basepartnames').text = new File(project(':core').projectDir, 'assets/baseparts/').list().sort().join("\n")
         }
 
         writeVersion = {
@@ -144,6 +137,10 @@ allprojects{
                 props["number"] = versionNumber
                 props["modifier"] = versionModifier
                 props["build"] = buildid
+                props["commitHash"] = "unknown"
+                if(project.hasProperty("showCommitHash")){
+                    props["commitHash"] = getCommitHash()
+                }
 
                 props.store(pfile.newWriter(), "Autogenerated file. Do not modify.")
             }
@@ -184,7 +181,6 @@ allprojects{
         maven{ url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven{ url "https://oss.sonatype.org/content/repositories/releases/" }
         maven{ url 'https://jitpack.io' }
-        jcenter()
     }
 
     task clearCache{
@@ -197,10 +193,21 @@ allprojects{
 
     tasks.withType(JavaCompile){
         targetCompatibility = 8
-        sourceCompatibility = 14
+        sourceCompatibility = JavaVersion.VERSION_17
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
         dependsOn clearCache
+
+        options.forkOptions.jvmArgs += [
+            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+        ]
     }
 }
 
@@ -208,26 +215,21 @@ configure(project(":annotations")){
     tasks.withType(JavaCompile){
         targetCompatibility = 8
         sourceCompatibility = 8
+        options.fork = true
     }
 }
 
 //compile with java 8 compatibility for everything except the annotation project
 configure(subprojects - project(":annotations")){
     tasks.withType(JavaCompile){
-        if(JavaVersion.current() != JavaVersion.VERSION_1_8){
-            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
-        }
-
-        doFirst{
-            options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
-        }
+        options.compilerArgs.addAll(['--release', '8'])
     }
 
     tasks.withType(Javadoc){
         options{
             addStringOption('Xdoclint:none', '-quiet')
-            addBooleanOption('-enable-preview', true)
-            addStringOption('-release', '14')
+            addStringOption('-release', '17')
+            encoding('UTF-8')
         }
     }
 }
@@ -239,56 +241,31 @@ project(":desktop"){
 
     dependencies{
         implementation project(":core")
+        implementation arcModule("extensions:discord")
+        implementation arcModule("natives:natives-filedialogs")
         implementation arcModule("natives:natives-desktop")
         implementation arcModule("natives:natives-freetype-desktop")
-        implementation 'com.github.MinnDevelopment:java-discord-rpc:v2.0.1'
 
         if(debugged()) implementation project(":debug")
 
         implementation "com.github.Anuken:steamworks4j:$steamworksVersion"
 
         implementation arcModule("backends:backend-sdl")
-    }
-}
-
-project(":ios"){
-    apply plugin: "java"
-    apply plugin: "robovm"
-
-    task incrementConfig{
-        def vfile = file('robovm.properties')
-        def bversion = getBuildVersion()
-        def props = new Properties()
-        if(vfile.exists()){
-            props.load(new FileInputStream(vfile))
-        }else{
-            props['app.id'] = 'io.anuke.mindustry'
-            props['app.version'] = '6.0'
-            props['app.mainclass'] = 'mindustry.IOSLauncher'
-            props['app.executable'] = 'IOSLauncher'
-            props['app.name'] = 'Mindustry'
-        }
-        
-        props['app.build'] = (!props.containsKey("app.build") ? 40 : props['app.build'].toInteger() + 1) + ""
-        if(bversion != "custom build"){
-            props['app.version'] = versionNumber + "." + bversion + (bversion.contains(".") ? "" : ".0")
-        }
-        props.store(vfile.newWriter(), null)
-    }
-
-    dependencies{
-        implementation project(":core")
-
-        implementation arcModule("natives:natives-ios")
-        implementation arcModule("natives:natives-freetype-ios")
-        implementation arcModule("backends:backend-robovm")
-
-        compileOnly project(":annotations")
+        annotationProcessor 'com.github.Anuken:jabel:0.9.0'
     }
 }
 
 project(":core"){
     apply plugin: "java-library"
+    apply plugin: "kotlin"
+    apply plugin: "kotlin-kapt"
+
+    kapt{
+        javacOptions{
+            option("-source", "17")
+            option("-target", "1.8")
+        }
+    }
 
     compileJava.options.fork = true
 
@@ -316,26 +293,85 @@ project(":core"){
                 }
             }
             def changelogs = file("../fastlane/metadata/android/en-US/changelogs/")
-            new File(changelogs, androidVersion + ".txt").text = (result)
+            changelogs.mkdirs()
+            try{
+                new File(changelogs, androidVersion + ".txt").text = (result)
+            }catch(Exception ignored){
+            }
+        }
+    }
+
+    task sourcesJar(type: Jar, dependsOn: classes){
+        archiveClassifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    task assetsJar(type: Jar, dependsOn: ":tools:pack"){
+        archiveClassifier = 'assets'
+        from files("assets"){
+            exclude "config", "cache", "music", "sounds", "sprites/fallback"
+        }
+    }
+
+    task musicJar(type: Jar){
+        archiveClassifier = 'music'
+        from files("assets"){
+            include "music/*", "sounds/*"
         }
     }
 
     dependencies{
         compileJava.dependsOn(preGen)
 
-        api "org.lz4:lz4-java:1.4.1"
+        api "org.lz4:lz4-java:1.8.0"
         api arcModule("arc-core")
+        api arcModule("extensions:flabel")
         api arcModule("extensions:freetype")
         api arcModule("extensions:g3d")
         api arcModule("extensions:fx")
         api arcModule("extensions:arcnet")
+        implementation arcModule("extensions:filedialogs")
         api "com.github.Anuken:rhino:$rhinoVersion"
-        if(localArc() && debugged()) api arcModule("extensions:recorder")
+        if(localArc && debugged()) api arcModule("extensions:recorder")
+        if(localArc) api arcModule(":extensions:packer")
 
+        annotationProcessor 'com.github.Anuken:jabel:0.9.0'
         compileOnly project(":annotations")
-        annotationProcessor project(":annotations")
-        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
+        if(!project.hasProperty("noKapt")) kapt project(":annotations")
+    }
 
+    afterEvaluate{
+        task mergedJavadoc(type: Javadoc){
+            def blacklist = [project(":ios"), project(":desktop"), project(":server"), project(":annotations")]
+            if(findProject(":android") != null){
+                blacklist += project(":android")
+            }
+
+            source rootProject.subprojects.collect{ project ->
+                if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
+                    return project.sourceSets.main.allJava
+                }
+            }
+
+            classpath = files(rootProject.subprojects.collect { project ->
+                if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
+                    return project.sourceSets.main.compileClasspath
+                }
+            })
+            destinationDir = new File(buildDir, 'javadoc')
+        }
+    }
+
+    gradle.taskGraph.whenReady{
+        //these are completely unnecessary
+        tasks.kaptGenerateStubsKotlin.onlyIf{ false }
+        tasks.compileKotlin.onlyIf{ false }
+        tasks.inspectClassesForKotlinIC.onlyIf{ false }
+    }
+
+    //comp** classes are only used for code generation
+    jar{
+        exclude("mindustry/entities/comp/**")
     }
 }
 
@@ -345,6 +381,7 @@ project(":server"){
     dependencies{
         implementation project(":core")
         implementation arcModule("backends:backend-headless")
+        annotationProcessor 'com.github.Anuken:jabel:0.9.0'
     }
 }
 
@@ -353,16 +390,19 @@ project(":tests"){
 
     dependencies{
         testImplementation project(":core")
-        testImplementation "org.junit.jupiter:junit-jupiter-params:5.3.1"
-        testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
+        testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.1"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
         testImplementation arcModule("backends:backend-headless")
-        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
+        testImplementation "org.json:json:20230618"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
     }
 
     test{
+        //fork every test so mods don't interact with each other
+        forkEvery = 1
         useJUnitPlatform()
         workingDir = new File("../core/assets")
-        testLogging {
+        testLogging{
             exceptionFormat = 'full'
             showStandardStreams = true
         }
@@ -378,6 +418,9 @@ project(":tools"){
         implementation arcModule("natives:natives-desktop")
         implementation arcModule("natives:natives-freetype-desktop")
         implementation arcModule("backends:backend-headless")
+
+        implementation("com.google.guava:guava:33.3.1-jre")
+        annotationProcessor 'com.github.Anuken:jabel:0.9.0'
     }
 }
 
@@ -386,7 +429,25 @@ project(":annotations"){
 
     dependencies{
         implementation 'com.squareup:javapoet:1.12.1'
-        implementation "com.github.Anuken.Arc:arc-core:$arcHash"
+        implementation arcModule("arc-core")
+    }
+}
+
+configure([":core", ":server"].collect{project(it)}){
+    java{
+        withJavadocJar()
+        withSourcesJar()
+    }
+
+    publishing{
+        publications{
+            maven(MavenPublication){
+                from components.java
+                if(project.name == "core"){
+                    artifact(tasks.named("assetsJar"))
+                }
+            }
+        }
     }
 }
 
@@ -407,6 +468,17 @@ task deployAll{
     dependsOn "desktop:packrWindows64"
     dependsOn "desktop:packrWindows32"
     dependsOn "desktop:packrMacOS"
-    dependsOn "server:deploy"
-    dependsOn "android:deploy"
+    if(versionModifier != "steam"){
+        dependsOn "server:deploy"
+        dependsOn "android:deploy"
+    }
+}
+
+task resolveDependencies{
+    doLast{
+        rootProject.allprojects{ project ->
+            Set<Configuration> configurations = project.buildscript.configurations + project.configurations
+            configurations.findAll{c -> c.canBeResolved}.forEach{c -> c.resolve()}
+        }
+    }
 }
